Added Google Maps Api Locate the Address of the User

--- a/app.json
+++ b/app.json
@@ -30,6 +30,12 @@
         {
           "cameraPermission": "The App Needs Access To The Camera To Take Photos"
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow The App To Use Your Location."
+        }
       ]
     ]
   }
