--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.72.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0"
+    "react-native-screens": "^3.24.0",
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
