--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.5",
+    "expo-app-loading": "^2.1.1",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
+    "expo-sqlite": "~11.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-dotenv": "^3.4.9",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
-    "react-native-maps": "1.7.1"
+    "react-native-screens": "^3.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
